# SystemCoreBuildTest

./: .gitmodules  CMakeLists.txt  README.md  meson.build
.github/workflows/: arm-and-mingw.yml  ci.yml  macos-native.yml  toolsets-list.yml  windows-native.yml
doc/: notes-cross.txt
doc/res/: codeorb.xcf  iconize.sh  rescale.sh  scaleAndIconize.sh
main/: Supervising.cpp  Supervising.h  main.cpp
